--- a/facerecognition/package.json
+++ b/facerecognition/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "clarifai": "^2.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.7.0",
     "react-scripts": "^3.2.0",
     "react-tilt": "^0.1.4",
+    "reactstrap": "^8.2.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
