--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.3",
     "morgan": "^1.9.1",
     "pg": "^7.14.0"
