added redis into docker server

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.3",
     "morgan": "^1.9.1",
-    "pg": "^7.14.0"
+    "pg": "^7.14.0",
+    "redis": "^2.8.0"
   }
 }
