--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,8 +11,10 @@ services:
         working_dir: /usr/src/smart-brain-api
         environment:
             POSTGRES_URI: postgres://sally:secret@postgres:5432/smart-brain-docker
+            REDIS_URI: redis://redis:6379
         links:
             - postgres
+            - redis
         ports:
             - "3000:3000"
         volumes:
@@ -30,3 +32,9 @@ services:
         build: ./postgres
         ports:
             - "5432:5432"
+
+    # Redis
+    redis:
+        image: redis
+        ports:
+            - "6379:6379"
